java-app.yml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: java-app
  spec:
    replicas: 2
    template:
      metadata:
        labels:
          app: java-app
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              - labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values: 
                      - java-app
                topologyKey: "kubernetes.io/hostname"
        containers:
        - name: java-app
          image: laszlocloud/java-app
          resources:
            limits:
              memory: 1G
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 3
- kind: Service
  apiVersion: v1
  metadata:
    name: java-app
  spec:
    selector:
      app: java-app
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
- kind: Ingress
  apiVersion: extensions/v1beta1
  metadata:
    name: java-app
    annotations:
      # https://github.com/kubernetes/ingress/blob/master/controllers/nginx/configuration.md#custom-max-body-size
      ingress.kubernetes.io/proxy-body-size: 8m
      kubernetes.io/ingress.class: "external"
  spec:
    rules:
    - host: java-app2.theselfservicedev.com
      http:
        paths:
        - backend:
            serviceName: java-app
            servicePort: 8080
